datasets/dataset_txt/certbot/certbot_124.txt
Contributor
adferrand commented on 25 Jun 2019
Our CI is broken because Python 3.4 is currently broken for Debian 8. This issue has been reported upstream and fixed few hours ago: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=931044
This bug makes the installation of python3.4 package of Debian 8 fail during the debconf invocation:
Setting up python3.4 (3.4.2-1+deb8u3) ...
  File "/usr/lib/python3.4/http/client.py", line 1014
    raise InvalidURL(f"URL can't contain control characters. {url!r} "
                                                                     ^
SyntaxError: invalid syntax
dpkg: error processing package python3.4 (--configure):
 subprocess installed post-installation script returned error exit status 1
As a consequence, apache_compat, nginx_compat and le_auto_jessie are broken.
Some users may also encountered the issue when installing certbot on Jessie using certbot-auto or debian packages.
Hopefully the issue will be resolved without manual intervention once the new packages are published to Debian repo.